@@ -42,24 +42,25 @@ sub create_makefile_pl {
 
   print {$fh} "# Note: this file was auto-generated by ", __PACKAGE__, " version $VERSION\n";
 
-  # If a custom subclass is being used, make sure we add its directory to @INC
+  # If a *bundled* custom subclass is being used, make sure we add its
+  # directory to @INC.
   my $subclass_load = '';
   if (ref($build) ne "Module::Build") {
     my $subclass_dir = $package->subclass_dir($build);
-    
+
     if (File::Spec->file_name_is_absolute($subclass_dir)) {
       my $base_dir = $build->base_dir;
 
       if ($build->dir_contains($base_dir, $subclass_dir)) {
 	$subclass_dir = File::Spec->abs2rel($subclass_dir, $base_dir);
-      } else {
-	$build->log_warn("Warning: builder subclass " . ref($build) . 
-			 " doesn't seem to have been loaded from within $base_dir");
+        $subclass_load = "use lib '$subclass_dir';";
       }
+
+    } else {
+      $subclass_load = "use lib '$subclass_dir';";
     }
-    $subclass_load = "use lib '$subclass_dir';";
   }
-  
+
   if ($type eq 'small') {
     printf {$fh} <<'EOF', $subclass_load, ref($build), ref($build);
     use Module::Build::Compat 0.02;
